--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,65 @@
 body {
-  font-family: Arial, "Helvetica Neue", Helvetica, sans-serif;
+  font-family: 'Orbitron', sans-serif;;
   font-size: 18px;
   line-height: 34px;
-  background-color: orange;
+  background-image: url("../images/Two_million_stars_in_our_Galaxy.JPG");
+
+ 
 
 }
+
+.format1{
+	background-color: orange;  
+	font-family: 'Orbitron', sans-serif;
+	font-size: 60px;
+	line-height: 80px;
+	text-align: center;
+}
+
+.format2{
+	background-color: orange;  
+	font-family: 'Orbitron', sans-serif;
+	font-size: 18px;
+	line-height: 34px;
+	text-align: center;
+}
+
+.format3{
+	background-color: #5499C7;  
+	font-family: 'Orbitron', sans-serif;
+	font-size: 60px;
+	line-height: 70px;
+	text-align: center;
+	color: white;
+}
+
+
+.cont{
+  width: 100%;
+  max-width: 960px;
+  min-width: 100px;
+  margin: 0 auto;
+  clear: both;
+  background-color: #5499C7; 
+}
+
+#logo1{
+	font-family: 'Orbitron', sans-serif;
+	font-size: 120px;
+	line-height: 150px;
+	text-align: center;
+	color: red;
+	font-weight: bold;
+	margin-top: 40px;
+
+}
+
+#foto1{
+  width: 420px;
+  height: 200px;
+  margin-left: auto;
+  margin-right: auto;
+
+}
+
+
