--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ body {
 }
 
 .format6{
-	background-color: #5499C7;  
+	background-color: #5499C7;
 	font-family: 'Orbitron', sans-serif;
 	font-size: 60px;
 	line-height: 70px;
@@ -47,7 +47,7 @@ body {
 }
 
 .format7{
-	background-color: #5499C7;  
+	background-color: #5499C7;
 	font-family: 'Orbitron', sans-serif;
 	font-size: 60px;
 	line-height: 70px;
@@ -64,7 +64,7 @@ body {
   min-width: 100px;
   margin: auto auto;
   clear: both;
-  background-color: #5499C7; 
+  /*background-color: #5499C7;*/ 
 }
 
 #logo1{
@@ -84,19 +84,20 @@ body {
   margin-left: auto;
   margin-right: auto;
   align-content: center;
-  
+  border-style:5px solid red;
   padding-top: 17px;
 
 }
 
 .format8{
-	background-color: #5499C7;  
+	background-color: #5499C7;
 	  
 	font-family: 'Orbitron', sans-serif;
 	font-size: 16px;
 	line-height: 28px;
 	text-align: center;
 	height: 240px;
+	/*border: 5px solid #1971cc;*/
 }
 
 .format2{
@@ -105,6 +106,7 @@ body {
 	font-size: 16px;
 	line-height: 28px;
 	text-align: center;
+	/*border: 5px solid #1971cc;*/
 }
 
 .format10{
