--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,7 +2,7 @@ body {
   font-family: 'Orbitron', sans-serif;;
   font-size: 18px;
   line-height: 34px;
-  background-image: url("../images/Two_million_stars_in_our_Galaxy.JPG");
+  background: url("../images/Two_million_stars_in_our_Galaxy.JPG");
 
  
 
